# aer-core

./: .gitattributes  .gitignore  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  pixi.toml  release-please-config.json
.github/workflows/: ci.yml  project-automation.yml  release-please.yml
bindings/dotnet/: .editorconfig  Aer.Core.slnx  Directory.Build.props
bindings/dotnet/Aer.Core/: Aer.Core.csproj  AerCancelException.cs  AerCancelHandle.cs  AerErrorCode.cs  AerEvent.cs  AerEventArgs.cs  AerEventCallback.cs  AerException.cs  AerExitReason.cs  AerTask.cs  AerTaskEventKind.cs  AerTaskHandle.cs  AerTimeoutException.cs  AssemblyInfo.cs  CallbackBridge.cs  NativeMethods.Helpers.cs  (+1 more)
bindings/dotnet/Aer.Core.Example/: Aer.Core.Example.csproj  Program.cs
bindings/dotnet/Aer.Core.Tests/: Aer.Core.Tests.csproj  AerTaskTests.cs  BehavioralContractTests.cs  CallbackMarshallingTests.cs  EnvironmentAndWorkingDirectoryTests.cs  NativeAbiTests.cs  SafeHandleTests.cs
core/: CHANGELOG.md  Cargo.toml
core/examples/: hello.rs  timeout.rs  tree.rs
core/include/: aer.h
core/src/: event.rs  ffi.rs  lib.rs  task.rs
core/src/os/: mod.rs  unix.rs  windows.rs
core/tests/: integration_test.rs
examples/: cancel.rs  capture.rs  env.rs  hello.rs  timeout.rs  tree.rs
include/: aer.h
spec/: aer-core-behavioral-spec-v1.0.md  aer-core-behavioral-spec-v1.1.md
spec/v1.0/: behavioral-spec.md
src/: event.rs  ffi.rs  lib.rs  machine.rs  task.rs
src/os/: mod.rs  unix.rs  windows.rs
tests/: integration_test.rs
