[package]
name = "aer-core"
version = "0.1.1"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Cross-language process execution and lifecycle supervision runtime"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Threading", "Win32_Foundation"] }
